<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<!-- Activity -->
	<string name="activity_main">@string/app_name</string>
	<string name="activity_settings">Настройки приложения</string>
	
	<!-- Promt titles -->
	<string name="promt_tip">Подсказка</string>
	<string name="promt_additional">Дополнительная информация</string>
	
	<!-- Error Page / m2 -->
	<string name="err_m2_title">Oops.</string>
	<string name="err_m2_desc">Ошибка загрузки. Проверьте подключение к сети и повторите попытку.</string>
	<string name="err_m2_action_start2048">1024 + 1024 = ?</string>
	<string name="err_m2_action_repeat">Повторить попытку</string>
	
	<!-- Dialog / Exit app -->
	<!--string name="dlg_exit_title">Выход из приложения</string-->
	<string name="dlg_exit_message">Вы действительно хотите закрыть приложение?</string>
	
	<!-- Dialog / Last page open -->
	<string name="dlg_open_last_page">Продолжить чтение?</string>
	<string name="dlg_open_last_page_message">Перед закрытием приложения вы читали статью. Хотите продолжить чтение?</string>
	
	<!-- Intro Page -->
	<string name="intro_title">@string/app_name</string>
	<string name="intro_subtitle">Проще. Удобнее. Быстрее.</string>
	<string name="intro_tip">Нажмите и удерживайте на кнопке с аналогичной иконкой для перехода к настройкам приложения.</string>
	<string name="intro_action_continue">Продолжить</string>
	
</resources>
