<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
	android:paddingStart="?android:attr/listPreferredItemPaddingStart"
	android:layout_height="match_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
		android:paddingStart="?android:attr/listPreferredItemPaddingStart"
		android:gravity="center"
		android:layout_gravity="center">

		<ImageView
			android:src="@drawable/ic_app_logo"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:layout_marginBottom="26dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/intro_title"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:gravity="center"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/intro_subtitle"
			android:layout_marginBottom="26dp"
			android:gravity="center"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:alpha="0.8"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/intro_action_continue"
			style="@style/Widget.AppCompat.Button.Colored"
			android:onClick="finishIntro"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="top|left|center"
		android:layout_marginBottom="?android:attr/listPreferredItemPaddingEnd"
		android:layout_gravity="bottom|center">

		<ImageView
			android:src="@drawable/ic_page_home"
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:layout_marginTop="10dp"/>

		<LinearLayout
			android:background="@drawable/background_preference_promt"
			android:layout_marginStart="?android:attr/listPreferredItemPaddingStart"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:paddingStart="14dp"
				android:paddingEnd="14dp"
				android:paddingTop="10dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				android:textColor="?colorAccent"
				android:layout_marginBottom="-6dp"
				android:text="@string/promt_tip"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="14dp"
				android:paddingEnd="14dp"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:text="@string/intro_tip"/>

		</LinearLayout>

	</LinearLayout>

</FrameLayout>

